--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,22 +1,26 @@
 .home-page {
+	& h1 {
+		margin: 0;
+		text-align: center;
+	}
+
 	& .section-1 {
+		padding-top: 64px;
+
 		& .card {
 			max-width: 960px;
-			display: flex;
-			justify-content: center;
 			margin-left: auto;
 			margin-right: auto;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			gap: 32px;
 
 			& .card-header {
 				display: flex;
 				flex-direction: column;
 				gap: 32px;
 				width: 100%;
-                text-align: center;
-
-				& h1 {
-					margin: 0;
-				}
 
 				& .replace-url {
 					display: flex;
@@ -46,6 +50,22 @@
 				}
 			}
 			& .card-body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 32px;
+
+				& .qr-preview {
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					justify-content: center;
+
+					& img {
+						width: 200px;
+                        height: 200px;
+					}
+				}
 			}
 		}
 	}
